# mengine

./: CMakeLists.txt  README.md
cmake/: FindGLFW.cmake  FindPython3.cmake
examples/: CMakeLists.txt  example_clickable.cpp  example_drawtext.cpp  example_tga.cpp
include/mengine/: config.h.in  mengine.h
include/mengine/engine/: clickable.h  engine.h  text.h
include/mengine/loaders/: tga_loader.h
include/mengine/scene/: intro.h  menu.h  scene.h
python/: CMakeLists.txt  engine.h  mengine.cpp  scene.h
python/examples/: example_colorscene.py
src/: main.cpp
src/engine/: clickable.cpp  engine.cpp  text.cpp
src/loaders/: tga_loader.cpp
src/scene/: intro.cpp  menu.cpp  scene.cpp
tests/: CMakeLists.txt  test_tga.cpp
tests/data/: test_tga_ctc24.tga.out  test_tga_utc32.tga.out
